--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
-    "winston": "^3.17.0",
+    "morgan": "^1.10.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -22,6 +23,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.1",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
