feat(auth): create basic signup request, handle errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
       "@types/express",
       "@types/cors",
       "@types/cookie-parser",
-      "@types/morgan"
+      "@types/morgan",
+      "@types/bcrypt"
     ],
     "incremental": true
   },
