--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "Drc Rep Tracker Backend Application",
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
